--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,7 +1,9 @@
 <div class="mt-5" style="display: block;">
   <div style="position: absolute; right: .5rem;">
-    <%= link_to 'Edit', edit_article_path(@article), class: "btn btn-primary" %>
-    <%= link_to 'Delete', @article, data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "btn btn-danger" %>
+    <div class="d-flex justify-content-center">
+      <%= link_to 'Edit', edit_article_path(@article), class: 'btn btn-primary me-2' %>
+      <%= button_to 'Destroy', article_path(article), method: :delete, class: 'btn btn-danger' %>
+    </div>
   </div>
 </div>
 <div class="d-flex align-items-center justify-content-center">
