--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,7 +1,7 @@
 <h1 class="m-2">Articles</h1>
 <div class="mt-2" style="display: block;">
   <div style="position: absolute; right: .5rem;">
-    <%= link_to 'New Article', new_article_path, class: "btn btn-primary" %>
+    <%= link_to 'New Article', new_article_path, class: 'btn btn-primary' %>
   </div>
 </div>
 <div class="d-flex align-items-center justify-content-center">
@@ -19,16 +19,11 @@
           <tr>
             <td class="align-middle"><%= article.id %></td>
             <td class="align-middle"><%= article.title %></td>
-            <td class="align-middle text-center">
-              <div class="dropdown">
-                <a class="btn btn-outline-dark" href role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  <i class="bi bi-three-dots"></i>
-                </a>
-                <ul class="dropdown-menu">
-                  <li><%= link_to 'View', article, class: "dropdown-item" %></li>
-                  <li><%= link_to 'Edit', edit_article_path(article), class: "dropdown-item" %></li>
-                  <li><%= link_to 'Delete', article, data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "dropdown-item text-danger" %></li>
-                </ul>
+            <td class="align-middle">
+              <div class="d-flex justify-content-center">
+                <%= link_to 'View', article, class: 'btn btn-light me-2' %>
+                <%= link_to 'Edit', edit_article_path(article), class: 'btn btn-warning me-2' %>
+                <%= button_to 'Destroy', article_path(article), method: :delete, class: 'btn btn-danger' %>
               </div>
             </td>
           </tr>
